--- a/PAC2PAC.ipynb
+++ b/PAC2PAC.ipynb
@@ -187,7 +187,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 202
         },
-        "outputId": "3a29b00b-2535-4c39-b450-2a895e17bf84"
+        "outputId": "c2448c20-bc5b-4bc5-edaf-c6f4e468a46f"
       },
       "cell_type": "code",
       "source": [
@@ -218,30 +218,30 @@
         "# Sort by matched - unmatched\n",
         "s = sorted(matchedVsUnmatched.items(), key=lambda x: x[1][0]-x[1][1])\n",
         "s.reverse()\n",
-        "s[:10]"
+        "[(pacs[k].Name, v) for k,v in s[:10]]"
       ],
-      "execution_count": 51,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[('C00010603', (1920, 660)),\n",
-              " ('C00075820', (1800, 584)),\n",
-              " ('C00027466', (1078, 102)),\n",
-              " ('C00042366', (1328, 360)),\n",
-              " ('C00000935', (1898, 1302)),\n",
-              " ('C00409003', (435, 67)),\n",
-              " ('C00409730', (531, 196)),\n",
-              " ('C00387464', (385, 73)),\n",
-              " ('C00495887', (324, 38)),\n",
-              " ('C00525543', (292, 23))]"
+              "[('DNC STATE PARTY VICTORY FUND', (1920, 660)),\n",
+              " ('NRCC-NATIONAL REPUBLICAN CONGRESSIONAL COMMITTEE', (1800, 584)),\n",
+              " ('NATIONAL REPUBLICAN SENATORIAL COMMITTEE', (1078, 102)),\n",
+              " ('DEMOCRATIC SENATORIAL CAMPAIGN COMMITTEE', (1328, 360)),\n",
+              " ('DEMOCRATIC CONGRESSIONAL CAMPAIGN COMMITTEE', (1898, 1302)),\n",
+              " ('HEARTLAND VALUES PAC', (435, 67)),\n",
+              " ('NEW DEMOCRAT COALITION PAC', (531, 196)),\n",
+              " ('ALAMO PAC', (385, 73)),\n",
+              " ('TOMORROW IS MEANINGFUL PAC-TIM PAC', (324, 38)),\n",
+              " ('PROJECT WEST PAC', (292, 23))]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 51
+          "execution_count": 54
         }
       ]
     }
